<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="io.github.sigill.dontyoufillit.MainActivity">

        <TextView
            android:id="@+id/creditsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/credits"
            android:textColor="@android:color/white"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/creditsIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="@string/credits_intro"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bsdLicense1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mit_license1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bsdLicense2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mit_license2"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bsdLicense3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mit_license3"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bsdLicense4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mit_license4"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
