<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="io.github.sigill.dontyoufillit.MainActivity">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mainButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:onClick="launchGame"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/play"
            android:textSize="32dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mainButtonCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:onClick="openCredits"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/credits"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="12dp" />
    </LinearLayout>
</ScrollView>
